--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "outDir": "dist",
       "moduleResolution": "node",
       "allowSyntheticDefaultImports": true,
-      "emitDeclarationOnly": true
+      "emitDeclarationOnly": true,
+      "noImplicitAny": true
    }
 }
