--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-toast-lib-kirpichenko",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "description": "",
   "homepage": "http://DmitryKirpichenko.github.io/toasty-lib",
   "scripts": {
@@ -53,7 +53,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
+    "rollup-plugin-deps-external": "^0.2.1",
     "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svg": "^2.0.0",
     "styled-components": "^5.3.5",
@@ -67,7 +69,8 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
-    "dist","src/images"
+    "dist",
+    "src/images"
   ],
   "types": "dist/index.d.ts",
   "repository": "https://github.com/DmitryKirpichenko/ToastLib.git",
